<resources>
    <string name="app_name">ESA Checkin</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="net_id_hint">Emory NetID (OPUS username)</string>
    <string name="save_button_text">SAVE</string>
    <string name="clear_button_text">CLEAR</string>
    <string name="check_in_code_hint">Check-in code</string>
    <string name="check_in_button_text">CHECK IN</string>
    <string name="settings_activity_label">Settings</string>
</resources>
